--- a/app/src/main/res/layout/memo.xml
+++ b/app/src/main/res/layout/memo.xml
@@ -2,7 +2,6 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="3dp">
@@ -11,7 +10,9 @@
         android:id="@+id/Memo_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:focusable="true"
+        android:clickable="true"
+        android:background="@drawable/ripple"
         android:padding="10dp"
         android:orientation="vertical">
 
