메인 화면 레이아웃 coordinatelayout으로 변경 아이콘 수정

--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -76,6 +76,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/borderline_black"
             android:text="@string/KoreanCancel"
+            android:fontFamily="@font/scdream5"
+            android:textStyle="bold"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +89,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/borderline_black"
             android:text="@string/KoreanOK"
+            android:fontFamily="@font/scdream5"
+            android:textStyle="bold"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/category_select_cancel"
