--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="19sp"
+        android:fontFamily="@font/scdream3"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
