--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#9AF1FF"
-        android:centerColor="#E69FFF"
-        android:endColor="#FFF9AF"
-        android:angle="0"/>
+    <solid android:color="#8282FF" />
 </shape>
