--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#D2EDFF"
-        android:centerColor="#F3DBFF"
-        android:endColor="#FFFDDB"
-        android:angle="0"/>
+    <solid android:color="#D2D2FF" />
 </shape>
